# async-stripe

./: .gitattributes  .gitignore  .releaserc.json  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  MIGRATION.md  Makefile.toml  README.md  RELEASE.md  build-api  build.rs  combine.py  combine_duplicates.py  crate_info.md  keys.json  lefthook.yml  mise.toml  out.diff  out.dot  output  release-plz.toml  spec3-short.sdk2.json  stripe.json
.claude/: settings.json
.github/: FUNDING.yml  dependabot.yml  (+1 more)
async-stripe/: CHANGELOG.md  Cargo.toml
async-stripe-async-std/: Cargo.toml
async-stripe-async-std/src/: client.rs  lib.rs
async-stripe-client-core/: CHANGELOG.md  Cargo.toml
async-stripe-client-core/src/: config.rs  lib.rs  pagination.rs  request_strategy.rs  stripe_request.rs
async-stripe-parser/: Cargo.toml
async-stripe-parser/src/: lib.rs
async-stripe-parser/src/snapshots/: async_stripe_parser__tests__parse_invalid_event.snap  async_stripe_parser__tests__parse_unknown_event_type.snap
async-stripe-types/: CHANGELOG.md  Cargo.toml
async-stripe-types/src/: currency.rs  error.rs  expandable.rs  ids.rs  lib.rs  miniserde_helpers.rs  pagination.rs  params.rs  serde_helpers.rs
async-stripe-webhook/: CHANGELOG.md  Cargo.toml
async-stripe-webhook/src/: error.rs  lib.rs  webhook.rs
async-stripe/examples/: checkout.rs  customer.rs
async-stripe/src/: client.rs  client_builder.rs  connector.rs  error.rs  lib.rs  pagination.rs
async-stripe/src/async_std/: client.rs  config.rs  mod.rs
async-stripe/src/client/: headers.rs  mod.rs  request_strategy.rs  stripe.rs
async-stripe/src/client/base/: async_std.rs  tokio.rs  tokio_blocking.rs
async-stripe/src/hyper/: blocking.rs  client.rs  client_builder.rs  connector.rs  mod.rs
async-stripe/tests/: client.rs
async-stripe/tests/it/: async_std.rs  hyper.rs  main.rs
bench/binary_size/: Cargo.toml  benchmarks.toml  bloat.txt  time.txt
bench/binary_size/src/: main.rs
bench/compile/slices/deser-many/: Cargo.toml
bench/compile/slices/deser-many/src/: main.rs
bench/compile/slices/requests/: Cargo.toml
bench/compile/slices/requests/src/: main.rs
crates/async_stripe/: Cargo.toml
crates/async_stripe/src/: lib.rs
crates/async_stripe_common/: Cargo.toml
crates/async_stripe_common/src/: lib.rs  resources.rs
crates/async_stripe_common/src/resources/: balance_transaction_ext.rs  card.rs  currency.rs  customer_ext.rs  generated.rs  issuing_card_ext.rs  line_item_ext.rs  types.rs
crates/async_stripe_core/: Cargo.toml
crates/async_stripe_core/src/: base_client.rs  error.rs  ids.rs  lib.rs  params.rs  stripe.rs  version.rs
crates/async_stripe_hyper/: Cargo.toml
crates/async_stripe_hyper/src/: lib.rs
crates/async_stripe_surf/: Cargo.toml
crates/async_stripe_surf/src/: lib.rs
examples/endpoints/: Cargo.toml
examples/endpoints/src/: checkout.rs  client_config.rs  connect.rs  customer.rs  main.rs  pagination_ext.rs  payment_intent.rs  payment_link.rs  strategy.rs  subscriptions.rs  timeout.rs
examples/pagination/: Cargo.toml
examples/pagination/src/: main.rs
examples/webhook-actix/: Cargo.toml
examples/webhook-actix/src/: main.rs
examples/webhook-axum/: Cargo.toml
examples/webhook-axum/src/: main.rs
examples/webhook-rocket/: Cargo.toml
examples/webhook-rocket/src/: main.rs
openapi/: .gitignore  Cargo.toml  README.md  add  build  commit  crate_graph.txt  crate_map.json  doc_urls.json  fixtures.json  gen_crates.toml  id_prefixes.json  main.c  mod_graph.txt  objects.json  request_path_params.json  spec3.json  test  version.json
openapi/src/: codegen.rs  components.rs  config.rs  crate_generator.rs  crate_inference.rs  crate_table.rs  crates.rs  dedup.rs  deduplication.rs  file_generator.rs  graph.rs  ids.rs  lib.rs  main.rs  mappings.rs  metadata.rs  object_context.rs  object_writing.rs  overrides.rs  printable.rs  requests.rs  rust_object.rs  rust_type.rs  schema.rs  spec.rs  spec_fetch.rs  spec_inference.rs  stripe_object.rs  types.rs  url_finder.rs  util.rs  utils.rs  visitor.rs  webhook.rs
openapi/src/templates/: cargo_toml.rs  derives.rs  deserialize.rs  enums.rs  enums_with_fields.rs  fielded_enum.rs  miniserde.rs  mod.rs  object_trait.rs  object_writer.rs  pagination.rs  parameters.rs  prelude.rs  requests.rs  structs.rs  utils.rs
site/: README.md  (+5 more)
stripe/: Cargo.toml
stripe/src/: client.rs  error.rs  ids.rs  lib.rs  params.rs
stripe/src/resources/: account.rs  address.rs  application_fee.rs  application_refund.rs  balance.rs  bank_account.rs  card.rs  charge.rs  coupon.rs  currency.rs  customer.rs  deleted.rs  discount.rs  dispute.rs  event.rs  file.rs  invoice_item.rs  invoices.rs  mod.rs  order.rs  order_return.rs  payment_intents.rs  payment_source.rs  payout.rs  plan.rs  product.rs  refund.rs  review.rs  scheduled_query.rs  sku.rs  source.rs  subscription.rs  transaction.rs  transfer.rs
stripe/tests/: encoding.rs  example.rs  sync.rs
stripe_client_core/: Cargo.toml
stripe_types/: Cargo.toml
stripe_types/src/: currency.rs  deser.rs  error.rs  expandable.rs  ids.rs  lib.rs  miniserde_helpers.rs  pagination.rs  params.rs  serde_helpers.rs
stripe_webhook/: Cargo.toml
stripe_webhook/src/: error.rs  lib.rs  webhook.rs
tests/: Cargo.toml  account.rs  charge.rs  checkout.rs  currency.rs  customer.rs  encoding.rs  example.rs  plan_interval.rs  price.rs  subscription.rs  subscription_item.rs  sync.rs
tests/mock/: mod.rs
tests/tests/it/: account.rs  charge.rs  checkout.rs  customer.rs  deser.rs  deserialization_fixture.rs  enums.rs  invoice.rs  main.rs  mock.rs  pagination_utils.rs  plan_interval.rs  price.rs  serialization.rs  subscription.rs  subscription_item.rs
tests/tests/it/async_tests/: mod.rs  pagination.rs
tests/tests/it/blocking/: account.rs  charge.rs  checkout.rs  customer.rs  invoice.rs  mod.rs  payment_intent.rs  plan_interval.rs  price.rs  product.rs  promotion_code.rs  subscription.rs  subscription_item.rs  token.rs  transfer_reversal.rs
tests/tests/it/mock/: mod.rs
tokio-stripe/: Cargo.toml  README.md
(+313 files in other folders)
