[workspace]
members = [
  "async-stripe",
  "generated/*",
  "stripe_types",
  "stripe_webhook",
  "tests",
  "examples/*"
]
resolver = "2"
# Makes dependency management simpler to allow codegen crate to use whichever dep versions
# it wants without affecting dependency resolution of the user-facing library crates
exclude = ["openapi"]

[workspace.package]
version = "0.22.2"
description = "API bindings for the Stripe HTTP API"
rust-version = "1.67.0"
authors = [
  "Anna Baldwin <abaldwin@developers.wyyerd.com>",
  "Kevin Stenerson <kestred@users.noreply.github.com>",
  "Alexander Lyon <arlyon@me.com>",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/arlyon/async-stripe"
repository = "https://github.com/arlyon/async-stripe"
documentation = "https://docs.rs/async-stripe"
keywords = ["stripe", "v1", "api", "async"]
categories = ["api-bindings"]
edition = "2021"

[workspace.dependencies]
serde = {version = ">=1.0.79", features = ["derive"] } # we use `serde(other)` which was introduced in 1.0.79
http-types = { version = "2.12.0", default-features = false }
smol_str = "0.2.0"
serde_json = "1.0"
