[workspace]
members = [
    "async-stripe-types",
    "async-stripe-webhook",
    "tests",
    "generated/*",
    "examples/*",
    "async-stripe-client-core",
    "async-stripe",
]

# Skip "examples/*" when running default commands since that adds a bunch of deps that makes
# development feedback loop slower.
default-members = ["async-stripe", "async-stripe-types", "async-stripe-webhook", "async-stripe-client-core", "generated/*"]
resolver = "2"
# Makes dependency management simpler to allow codegen crate to use whichever dep versions
# it wants without affecting dependency resolution of the user-facing library crates
exclude = ["openapi"]

[workspace.package]
version = "1.0.0-alpha.6"
description = "API bindings for the Stripe HTTP API"
rust-version = "1.88.0"
authors = [
    "Anna Baldwin <abaldwin@developers.wyyerd.com>",
    "Kevin Stenerson <kestred@users.noreply.github.com>",
    "Alexander Lyon <arlyon@me.com>",
    "Matthew Zeitlin <mzeitlin11@gmail.com>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/arlyon/async-stripe"
repository = "https://github.com/arlyon/async-stripe"
documentation = "https://docs.rs/async-stripe"
keywords = ["stripe", "v1", "api", "async"]
categories = ["api-bindings"]
edition = "2024"

[workspace.dependencies]
serde = { version = ">=1.0.79", features = ["derive"] } # we use `serde(other)` which was introduced in 1.0.79
smol_str = { version = "=0.3.2", features = ["serde"] }
miniserde = "0.1.34"
serde_json = "1.0.115"
serde_qs = "0.15.0"
