[package]
name = "async-stripe-async-std"
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
name = "stripe_async_std"

[dependencies]
async-std = { version = "1.12.0" }
http-types = { version = "2.12.0", default-features = false }
surf = { version = "2.1" }
thiserror = "1.0.58"
miniserde.workspace = true
bytes = "1.6.0"
async-stripe-shared = { path = "../generated/async-stripe-shared" }
async-stripe-client-core = { path = "../async-stripe-client-core" }

[features]
uuid = ["async-stripe-client-core/uuid"]

[dev-dependencies]
serde.workspace = true
async-std = { version = "1.12.0", features = ["attributes"] }
httpmock = { version = "0.7.0", default-features = false }
