[package]
name = "async-stripe-client-core"
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
name = "stripe_client_core"

[dependencies]
async-stripe-shared = { path = "../generated/async-stripe-shared" }
async-stripe-types = { path = "../async-stripe-types" }
serde_json.workspace = true
serde.workspace = true
serde_qs.workspace = true
bytes = "1.6.0"
miniserde.workspace = true
futures-util = "0.3.28"
uuid = { version = "1.6.1", optional = true, features = ["v4"] }
tracing = "0.1.40"
thiserror = "2.0.11"
