[package]
name = "async-stripe-webhook"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "stripe_webhook"

[dependencies]
async-stripe-types = { path = "../async-stripe-types" }
async-stripe-shared = { path = "../generated/async-stripe-shared" }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "1.0.24"
miniserde.workspace = true
serde.workspace = true

async-stripe-core = { path = "../generated/async-stripe-core", optional = true }
async-stripe-checkout = { path = "../generated/async-stripe-checkout", optional = true }
async-stripe-billing = { path = "../generated/async-stripe-billing", optional = true }

[dev-dependencies]
serde_json.workspace = true

[package.metadata.docs.rs]
features = ["async-stripe-core", "async-stripe-checkout", "async-stripe-billing"]