[package]
name = "async-stripe"
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
name = "stripe"

[dependencies]
hyper = { version = "0.14.28", default-features = false, features = ["http1", "http2", "client", "tcp"], optional = true }
hyper-tls = { version = "0.5", optional = true }
hyper-rustls = { version = "0.24", default-features = false, features = ["http1", "http2", "tls12", "logging"], optional = true }
thiserror = "1.0.58"
miniserde.workspace = true
bytes = "1.6.0"
tokio = { version = "1.24.1", features = ["rt", "macros"] }

# async-std-surf deps
async-std = { version = "1.12.0", optional = true }
surf = { version = "2.1", optional = true }
http-types = { version = "2.12.0", default-features = false, optional = true }

async-stripe-shared = { path = "../generated/async-stripe-shared" }
async-stripe-client-core = { path = "../async-stripe-client-core" }

[features]
default = ["default-tls"]

default-tls = ["dep:hyper-tls", "__hyper"]
native-tls = ["default-tls", "__hyper"]
rustls-tls-webpki-roots = ["__rustls", "hyper-rustls/webpki-tokio", "__hyper"]
rustls-tls-native = ["__rustls", "hyper-rustls/native-tokio", "__hyper"]
__rustls = ["dep:hyper-rustls"]
__hyper = ["dep:hyper"]

blocking = ["__hyper"]
async-std-surf = ["async-std", "surf", "http-types"]

uuid = ["async-stripe-client-core/uuid"]

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
httpmock = { version = "0.7.0", default-features = false }


