[package]
name = "async-stripe"
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[lib]
name = "stripe"

[dependencies]
hyper = { version = "1.5.2", default-features = false, features = ["http1", "http2", "client"], optional = true }
hyper-util = {version = "0.1.10", features = ["client-legacy", "tokio", "http1", "http2"], optional = true}
http-body-util = { version = "0.1.2", optional = true }
hyper-tls = { version = "0.6", optional = true }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "tls12", "logging"], optional = true }
thiserror = "2.0.11"
miniserde.workspace = true
bytes = "1.6.0"
tokio = { version = "1.24.1", features = ["rt", "macros"] }

# async-std-surf deps
async-std = { version = "1.12.0", optional = true }
surf = { version = "2.1", optional = true }
http-types = { version = "2.12.0", default-features = false, optional = true }

async-stripe-shared = { path = "../generated/async-stripe-shared", version = "1.0.0-alpha.7" }
async-stripe-client-core = { path = "../async-stripe-client-core", version = "1.0.0-alpha.7" }

[features]
default = ["default-tls"]

default-tls = ["dep:hyper-tls", "__hyper"]
native-tls = ["default-tls"]
rustls-tls-webpki-roots = ["__rustls", "hyper-rustls/webpki-roots", "__hyper"]
rustls-tls-native = ["__rustls", "hyper-rustls/rustls-native-certs", "__hyper"]
rustls-aws-lc-rs = ["__rustls", "hyper-rustls/aws-lc-rs"]
rustls-ring = ["__rustls", "hyper-rustls/ring"]
__rustls = ["dep:hyper-rustls"]
__hyper = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]

blocking = ["__hyper"]
async-std-surf = ["async-std", "surf", "http-types"]

uuid = ["async-stripe-client-core/uuid"]

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
httpmock = { version = "0.7.0", default-features = false }
