[package]
name = "stripe-openapi-codegen"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
edition = "2018"

# workaround for semantic-release-cargo
publish = ["do-not-publish"]

[dependencies]
heck = "0.3"
lazy_static = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
anyhow = "1.0.34"
tracing = "0.1.36"
openapiv3 = "2"
indexmap = "2"
tracing-subscriber = "0.3.15"
structopt = "0.3.26"
indoc = "1.0.7"