[package]
name = "stripe-openapi-codegen"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
edition = "2021"

# workaround for semantic-release-cargo
publish = ["do-not-publish"]

[dependencies]
heck = "0.5.0"
petgraph = { version = "0.8.2", default-features = false, features = ["graphmap", "std"] }
lazy_static = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex-lite = "0.1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.6"
anyhow = "1.0.34"
tracing = "0.1.40"
openapiv3 = "2"
indexmap = "2.2.5"
tracing-subscriber = "0.3.15"
tabled = "0.20.0"
clap = { version = "4.3", features = ["derive"] }
indoc = "2.0.1"
