[package]
name = "stripe-openapi-codegen"
version = "0.1.0"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
edition = "2024"

# workaround for semantic-release-cargo
publish = ["do-not-publish"]

[dependencies]
heck = "0.5.0"
petgraph = { version = "0.8.3", default-features = false, features = ["graphmap", "std"] }
lazy_static = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex-lite = "0.1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
anyhow = "1.0.100"
tracing = "0.1.40"
openapiv3 = "2"
indexmap = "2.12.1"
tracing-subscriber = "0.3.20"
tabled = "0.20.0"
clap = { version = "4.5", features = ["derive"] }
indoc = "2.0.7"
