[package]
name = "stripe-rust" # b.c. stripe and stripe-rs were already taken
version = "0.5.3"
description = "API bindings for the Stripe v1 HTTP API"
authors = [
  "Anna Baldwin <abaldwin@developers.wyyerd.com>",
  "Kevin Stenerson <kstenerson@developers.wyyerd.com>"
]
license = "MIT/Apache-2.0"
readme = "../README.md"
repository = "https://github.com/wyyerd/stripe-rs"
documentation = "https://docs.rs/stripe-rust"
keywords = ["stripe", "v1", "api"]
categories = ["api-bindings"]

[badges]
travis-ci = {repository = "wyyerd/stripe-rs"}

[lib]
name = "stripe"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.6"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.4"
sha2 = "0.7"
