[package]
name = "stripe_client_core"
version.workspace = true
description.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
stripe_shared = { path = "../generated/stripe_shared" }
stripe_types = { path = "../stripe_types" }
serde_json.workspace = true
serde.workspace = true
serde_qs.workspace = true
bytes = "1.6.0"
miniserde.workspace = true
futures-util = "0.3.28"
uuid = { version = "1.6.1", optional = true, features = ["v4"] }
