[package]
name = "stripe_types"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
smol_str.workspace = true
serde_json.workspace = true
serde_path_to_error = "0.1.8"

miniserde = { workspace = true, optional = true }

[features]
min-ser = ["miniserde"]

[dev-dependencies]
serde_qs = "0.12.0"