[package]
name = "stripe_types"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
smol_str.workspace = true
serde_json.workspace = true
miniserde.workspace = true

[dev-dependencies]
serde_qs = "0.12.0"

[features]
serialize = []
deserialize = []
