[package]
name = "stripe_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
stripe_types = {path = "../stripe_types"}
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "1.0.24"
serde_json.workspace = true
serde.workspace = true

stripe_core = {path = "../generated/stripe_core", optional = true}
stripe_checkout = {path = "../generated/stripe_checkout", optional = true}
stripe_billing = {path = "../generated/stripe_billing", optional = true}

[package.metadata.docs.rs]
features = ["stripe_core", "stripe_checkout", "stripe_billing"]