[package]
name = "async-stripe-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
serde.workspace = true
miniserde.workspace = true
serde_qs.workspace = true
serde_json.workspace = true
chrono = "0.4.26"
httpmock = { version = "0.7.0", default-features = false }
wiremock = "0.5.22"
futures-util = { version = "0.3.21" }
bytes = "1.6.0"
tokio = { version = "1.24.1", features = ["rt", "macros"] }
stripe_types = { path = "../stripe_types", features = ["serialize"] }
stripe_client_core = { path = "../stripe_client_core" }
stripe_async_std = { path = "../stripe_async_std" }
stripe_connect = { path = "../generated/stripe_connect", features = ["account", "transfer_reversal", "serialize", "deserialize"] }
stripe_billing = { path = "../generated/stripe_billing", features = ["invoice", "plan", "subscription", "subscription_item", "usage_record", "serialize"] }
stripe_core = { path = "../generated/stripe_core", features = ["customer", "charge", "token", "serialize"] }
stripe_checkout = { path = "../generated/stripe_checkout", features = ["checkout_session", "serialize"] }
stripe_product = { path = "../generated/stripe_product", features = ["product", "price", "promotion_code", "serialize"] }
stripe_payment = { path = "../generated/stripe_payment", features = ["serialize"] }
stripe_treasury = { path = "../generated/stripe_treasury", features = ["serialize"] }
stripe_terminal = { path = "../generated/stripe_terminal", features = ["serialize"] }
stripe_fraud = { path = "../generated/stripe_fraud", features = ["serialize"] }
stripe_issuing = { path = "../generated/stripe_issuing", features = ["serialize"] }
stripe_misc = { path = "../generated/stripe_misc", features = ["serialize"] }

async-stripe = { path = "../async-stripe", default-features = false, features = ["blocking"] }

# Copied from async-stripe/Cargo.toml features so that we can run with all those features too
[features]
default = ["default-tls"]
native-tls = ["default-tls"]
default-tls = ["async-stripe/default-tls"]
rustls-tls-webpki-roots = ["async-stripe/rustls-tls-webpki-roots"]
rustls-tls-native = ["async-stripe/rustls-tls-native"]
