[package]
name = "async-stripe-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
serde.workspace = true
miniserde.workspace = true
serde_qs.workspace = true
serde_json.workspace = true
chrono = "0.4.26"
httpmock = { version = "0.7.0", default-features = false }
wiremock = "0.5.22"
futures-util = { version = "0.3.21" }
bytes = "1.6.0"
tokio = { version = "1.24.1", features = ["rt", "macros"] }
async-stripe-types = { path = "../async-stripe-types", features = ["serialize"] }
async-stripe-client-core = { path = "../async-stripe-client-core" }
async-stripe-connect = { path = "../generated/async-stripe-connect", features = ["account", "transfer_reversal", "serialize", "deserialize"] }
async-stripe-billing = { path = "../generated/async-stripe-billing", features = ["invoice", "plan", "subscription", "subscription_item", "serialize"] }
async-stripe-core = { path = "../generated/async-stripe-core", features = ["customer", "charge", "token", "serialize"] }
async-stripe-checkout = { path = "../generated/async-stripe-checkout", features = ["checkout_session", "serialize"] }
async-stripe-product = { path = "../generated/async-stripe-product", features = ["product", "price", "promotion_code", "serialize"] }
async-stripe-payment = { path = "../generated/async-stripe-payment", features = ["serialize"] }
async-stripe-treasury = { path = "../generated/async-stripe-treasury", features = ["serialize"] }
async-stripe-terminal = { path = "../generated/async-stripe-terminal", features = ["serialize"] }
async-stripe-fraud = { path = "../generated/async-stripe-fraud", features = ["serialize"] }
async-stripe-issuing = { path = "../generated/async-stripe-issuing", features = ["serialize"] }
async-stripe-misc = { path = "../generated/async-stripe-misc", features = ["serialize"] }

async-stripe = { path = "../async-stripe", default-features = false, features = ["blocking", "async-std-surf"] }

# Copied from async-stripe/Cargo.toml features so that we can run with all those features too
[features]
default = ["default-tls"]
native-tls = ["default-tls"]
default-tls = ["async-stripe/default-tls"]
rustls-tls-webpki-roots = ["async-stripe/rustls-tls-webpki-roots"]
rustls-tls-native = ["async-stripe/rustls-tls-native"]
