[package]
name = "tokio-stripe"
version = "0.0.0"
description = "Asynchronous API for stripe-rust"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/wyyerd/stripe-rs"
keywords = ["stripe", "v1", "api", "tokio"]
categories = ["api-bindings"]

[dependencies]
tokio = "0.1"
