[package]
name = "binary_size"
version = "0.1.0"
authors = ["Kevin Stenerson <kestred@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
full = ["async-stripe/webhook-events"]
blocking = []
async = ["async-std"]
runtime-tokio-hyper = ["async-stripe/runtime-tokio-hyper", "async"]
runtime-tokio-hyper-rustls = ["async-stripe/runtime-tokio-hyper-rustls", "async"]
runtime-tokio-hyper-rustls-webpki = ["async-stripe/runtime-tokio-hyper-rustls-webpki", "async"]
runtime-async-std-surf = ["async-stripe/runtime-async-std-surf", "async"]
runtime-blocking = ["async-stripe/runtime-blocking", "blocking"]
runtime-blocking-rustls = ["async-stripe/runtime-blocking-rustls", "blocking"]
runtime-blocking-rustls-webpki = ["async-stripe/runtime-blocking-rustls-webpki", "blocking"]

[dependencies]
async-stripe = { path = "../../async-stripe", default-features = false }
async-std = { version = "1.7.0", features = ["attributes"], optional = true }
